--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "nodemon index.js",
-    "build": "npm i"
+    "dev": "nodemon src/index.js",
+    "build":"npm i"
   },
   "author": "",
   "license": "ISC",
